View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025183 | Open CASCADE | OCCT:WOK | public | 2014-08-21 09:10 | 2015-05-14 15:31 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025183: WOK - add "Standard_Override" specifier to redefined methods | ||||
Description | WOK can be improved to add Standard_OVERRIDE specifier in generated C++ headers for class methods declared in CDL as "is redefined virtual". | ||||
Steps To Reproduce | - Generate Visual Studio projects (VS2012 or later) with patched WOK - Build OCCT | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR25183 has been created by dbv. SHA-1: f9daa66ac4119400d8a1e8909b782292fc8a6b86 Detailed log of new commits: Author: dbv Date: Fri Jan 16 16:23:31 2015 +0300 0025183: WOK - add "Standard_Override" specifier to redefined methods Fixed Standard_OVERRIDE macro description Fixed methods redefinition |
|
WOK now adds "Standard_OVERRIDE" specifier to redefined methods. Dear kgv, please review occt and occt-wok CR25183 branches. |
|
Branch CR25183 has been updated forcibly by dbv. SHA-1: 66d3d8e0074ce54e0716039be03b8d2e7c3360de |
|
Please test and integrate. |
|
Fix for WOK was tested on master. All are OK. |
|
Fix has been integrated into master of occt-wok repository |
|
Branch CR25183 has been deleted by kgv. SHA-1: 66d3d8e0074ce54e0716039be03b8d2e7c3360de |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-08-21 09:10 | kgv | New Issue | |
2014-08-21 09:10 | kgv | Assigned To | => kgv |
2014-08-21 09:10 | kgv | Relationship added | related to 0025182 |
2014-08-21 09:36 |
|
Description Updated | |
2014-08-21 09:38 |
|
Summary | Standard_OVERRIDE - add "override" specifier to redefined methods => WOK - add "Standard_Override" specifier to redefined methods |
2014-08-21 09:38 |
|
Description Updated | |
2014-10-29 13:46 |
|
Target Version | 6.8.0 => 7.0.0 |
2015-01-13 12:08 | kgv | Assigned To | kgv => dbv |
2015-01-16 16:36 | git | Note Added: 0036156 | |
2015-01-16 16:37 |
|
Status | new => assigned |
2015-01-16 16:39 |
|
Note Added: 0036157 | |
2015-01-16 16:39 |
|
Assigned To | dbv => kgv |
2015-01-16 16:39 |
|
Status | assigned => resolved |
2015-01-16 16:39 |
|
Steps to Reproduce Updated | |
2015-01-16 16:41 |
|
Steps to Reproduce Updated | |
2015-01-21 14:00 | kgv | Relationship added | related to 0025246 |
2015-02-18 16:38 | git | Note Added: 0037670 | |
2015-03-03 11:11 | kgv | Note Added: 0038029 | |
2015-03-03 11:11 | kgv | Assigned To | kgv => bugmaster |
2015-03-03 11:11 | kgv | Status | resolved => reviewed |
2015-03-03 11:11 | kgv | Target Version | 7.0.0 => 6.9.0 |
2015-03-04 17:52 | bugmaster | Note Added: 0038097 | |
2015-03-04 17:52 | bugmaster | Status | reviewed => tested |
2015-03-04 17:55 | bugmaster | Note Added: 0038098 | |
2015-03-04 17:55 | bugmaster | Status | tested => verified |
2015-03-04 17:55 | bugmaster | Resolution | open => fixed |
2015-03-05 12:03 |
|
Status | verified => feedback |
2015-03-05 12:03 |
|
Resolution | fixed => reopened |
2015-03-05 12:09 |
|
Status | feedback => reviewed |
2015-03-18 17:19 | bugmaster | Status | reviewed => verified |
2015-03-18 17:19 | bugmaster | Resolution | reopened => fixed |
2015-04-09 09:39 | git | Note Added: 0039429 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |