0025183: WOK - add "Standard_Override" specifier to redefined methods

WOK now adds "Standard_OVERRIDE" specifier to redefined methods